Name:          sihemo
Version:       0.0.0.1
Synopsis:      Simple Heartbeat Monitoring
Homepage:      http://github.com/jaspervdj/sihemo
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.2

-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.

Library
  Hs-source-dirs: src

  Exposed-modules:     
    Sihemo
    Sihemo.Client
    Sihemo.Monitor
    Sihemo.Types

  Other-modules:
    Sihemo.Web

  -- TODO: remove random
  Build-depends:
    aeson           >= 0.5   && < 0.6,
    attoparsec      >= 0.9   && < 0.11,
    base            >= 4     && < 5,
    bytestring      >= 0.9   && < 0.10,
    containers      >= 0.3   && < 0.5,
    mtl             >= 2.0   && < 2.1,
    random          >= 1.0   && < 1.1,
    snap-core       >= 0.6   && < 0.8,
    snap-server     >= 0.6   && < 0.8,
    text            >= 0.10  && < 0.12,
    websockets      >= 0.5.2 && < 0.6,
    websockets-snap >= 0.5   && < 0.6

Executable sihemo
  Hs-source-dirs: src
  Main-is:        Main.hs
