Name:          sihemo
Version:       0.0.0.1
Synopsis:      Simple Heartbeat Monitoring
Homepage:      http://github.com/jaspervdj/sihemo
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.2

Data-dir:   data
Data-files:
  default.css
  down.png
  hide.png
  index.html
  jquery-1.7.1.min.js
  show.png
  shutdown.png
  sihemo.js
  up.png

Library
  Hs-source-dirs: src

  Exposed-modules:     
    Sihemo
    Sihemo.Client
    Sihemo.Monitor
    Sihemo.Types

  Other-modules:
    Sihemo.Web

  Build-depends:
    aeson           >= 0.5  && < 0.7,
    attoparsec      >= 0.9  && < 0.11,
    base            >= 4    && < 5,
    bytestring      >= 0.9  && < 0.10,
    containers      >= 0.3  && < 0.5,
    filepath        >= 1.1  && < 1.4,
    mtl             >= 2.0  && < 2.1,
    snap-core       >= 0.8  && < 0.9,
    snap-server     >= 0.8  && < 0.9,
    text            >= 0.10 && < 0.12,
    websockets      >= 0.6  && < 0.7,
    websockets-snap >= 0.6  && < 0.7

Executable sihemo
  Hs-source-dirs: src
  Main-is:        Main.hs
